# CEDS808-TrabFinal

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/: df_metrics_results_tunning_lgbm.pkl
models/encoders/: bool_handler.pkl  encoder.pkl  features_fill_null.pkl  fill_string_missing.pkl  seletor_2.pkl
models/predictors/: model.pkl
models/wrapped/: model_pipeline_prod.pkl
notebooks/: 01-EDA copy.ipynb  01-EDA.ipynb  02-build_features.ipynb  03-train_test_split.ipynb  04-Model_selection.ipynb  05-Model.ipynb  06-Resultados.ipynb
src/config/: feature_config.yaml
src/data/: basic_process.py  train_test_split.py
src/features/: build_features.py  create_encoder.py  feature_selection.py
src/features/selected/: features_selected.yaml
src/models/: generate_artifacts.py  model_selection.py  tuning.py
src/utils/: optuna_settings.py  training_utils.py  transformers.py
