[build-system]

requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CEDS-808"
version = "0.0.1"
authors = [
  { name = "Leonardo Mazzamboni Colussi", email = "mazzacolussi@gmail.com" }
]
description = "Trabalho final da disciplina CEDS808-ITA"


[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = {"" = "src"}